Modify Get List of cruds and Business Processes
